<resources>
    <string name="app_name">CompraTodo</string>
    <string name="login">Login</string>
    <string name="googleapikey">AIzaSyCku6BIGgNKDXMvZP5PgH01iMu0bMIacoI</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">HOME</string>
    <string name="view">View</string>
    <string name="ruc">RUC</string>
    <string name="dni">DNI</string>
    <string name="next">Next</string>
    <string name="failed">Failed</string>
    <string name="rucnumber">RUC NO :</string>
    <string name="dninumber">DNI (Username12)</string>
    <string name="phone_no">Phone No :</string>
    <string name="account_num">Account No :</string>
    <string name="account_type">Account Type :</string>
    <string name="name">Name</string>
    <string name="not_available">Not Available</string>
    <string name="retail">Retail</string>
    <string name="wholesale">Wholesale</string>
    <string name="farmer">Farmer</string>
    <string name="loginc">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_no">Account No</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="you_have">You have already an account ?</string>
    <string name="dont_have">Don\'t Have An Account ?</string>
    <string name="submit">Submit</string>
    <string name="permit">Permit</string>
    <string name="img_permission">Cancelling, required permissions are not granted</string>
    <string name="permitimg">Add Image of Permit</string>
    <string name="heathcertificate">Heath Certificate</string>
    <string name="heathcertificateimg">Add Image of Heath Certificate</string>
    <string name="phoneno">Phone no</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="cnfpassword">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="emailid">Email Id</string>
    <string name="menu_gallery">Gallery</string>
    <string name="i_agree">I agree with Terms &amp; Condition</string>
    <string name="tandc">Terms and Conditions</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome">Welcome to CompraTodo</string>
    <string name="menu_profile">MY PROFILE</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_orders">MY ORDERS</string>
    <string name="menu_offers">OFFERS</string>
    <string name="menu_wishlist">MY WISHLIST</string>
    <string name="menu_about">ABOUT US</string>
    <string name="menu_invite">INVITE FRIENDS</string>
    <string name="menu_terms">TERMS &amp; CONDITION</string>
    <string name="menu_help">HELP CENTER</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="logout">Logout</string>
    <string name="sellertype">Please Select your Seller Type</string>
    <string name="location">vijay  nagar indore madhyapradesh india</string>
    <string name="new_product">New</string>
    <string name="view_all_category">View All Categories</string>
    <string name="category_management">Category Management</string>
    <string name="total_earning">Total Earning</string>
    <string name="total_order">Total Order</string>
    <string name="change_address">Change Address</string>
    <string name="leku_title_activity_location_picker">Location Picker</string>
    <string name="leku_load_location_error">Something went wrong. Please try again.</string>
    <string name="leku_no_search_results">There are no results for your search</string>
    <string name="leku_unknown_location">unknown location</string>
    <string name="leku_voice_search_promp">Search by voice…</string>
    <string name="leku_voice_search_extra_language">en-EN</string>
    <string name="leku_toolbar_action_voice_title">Voice</string>
    <string name="leku_search_hint">Search</string>
    <string name="business_address">My business Address</string>
    <string name="completed_order">Completed Order</string>
    <string name="nearby">Products Near by You</string>
    <string name="newarrival">New Arrivals</string>
    <string name="related">Related Products</string>
    <string name="ratting">Rating and Reviews</string>
    <string name="Latestreview">Latest Ratting and Review</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">FILTER</string>
    <string name="here">here</string>
    <string name="mine">mine</string>
    <string name="sorting">SORT BY</string>
    <string name="location_enabled">please enabled location</string>
    <string name="please_wait">Please wait</string>
    <string name="ok">Ok</string>
    <string name="didnt_match">Password and Confirm Password must be Same</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="update_product">Update Product</string>
    <string name="action_share">Share</string>
    <string name="internet_connection">Please Enable Your Internet Connection.</string>
    <string name="no_internet">No Internet !</string>
    <string name="retry">Retry</string>
    <string name="verify_now">Verify Now</string>
    <string name="please_type">Please type the verification code send to</string>
    <string name="val_otp">please enter otp</string>
    <string name="val_profilepic">please select profile picture</string>
    <string name="val_email">please fill  valid email</string>
    <string name="val_name">please fill name</string>
    <string name="val_lname">please fill last name</string>
    <string name="val_dni">please fill Dni</string>
    <string name="val_ruc">please fill Ruc</string>
    <string name="val_phone">please fill phone number</string>
    <string name="val_password">please fill password</string>
    <string name="val_cnfpassword">please fill confirm  password</string>
    <string name="val_heathcertificate">please fill heathcertificate number</string>
    <string name="val_permit">please fill permit number</string>
    <string name="val_account">please fill account number</string>
    <string name="val_correct_pass">Please filled atleast 1 uppercase,1 lowercase,and 1 symbol in password</string>
    <string name="action_upload">Upload</string>
    <string name="login_as_seller">please login as seller</string>
    <string name="login_as_user">please login as buyer</string>
    <string name="action_copy">Copy</string>
    <string name="action_print">Print</string>
    <string name="pending">Pending</string>
    <string name="complete">Completed</string>
    <string name="cancel">Canceled</string>
    <string name="title_activity_vendor_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Order History</string>
    <string name="title_search">search</string>
    <string name="title_save">Products</string>
    <string name="upload_product">Add Product</string>
    <string name="select_category">Salect Category</string>
    <string name="Category_prompt">Choose Category</string>
    <string name="select_subcategory">Salect SubCategory</string>
    <string name="enter_product_name">Product Name</string>
    <string name="enter_product_price">Price per unit (per MOQ if wholesale)</string>
    <string name="Product_Description">Description</string>
    <string name="Small">Small</string>
    <string name="usd">USD</string>
    <string name="edit">Edit</string>
    <string name="stock">In Stock</string>
    <string name="Medium">Medium</string>
    <string name="Large">Large</string>
    <string name="Upload">Upload</string>
    <string name="select_maincategory">Select Main Category</string>
    <string name="enter_product_celling">Purches Price (Optional)</string>
    <string name="select_unit">Unit of Measure</string>
    <string name="enter_minimumorder">Minimum Order Quantity (If wholesale)</string>
    <string name="enter_quantityinstok">Quantity in stok</string>
    <string name="catlog">My Catlog</string>
    <string name="select_businesscategory">Select Business Category</string>
    <string name="add_item">Add Items</string>
    <string name="deletecatlog">Delete Catlog</string>
    <string name="delete">Delete</string>
    <string name="dollor">$</string>
    <string name="addimg1">Please Add First Image </string>
    <string name="addimg2">Please Add Second Image</string>
    <string name="addimg3">Please Add Third Image</string>
    <string name="updatecatlog">Update Catlog</string>
    <string name="addproductname">Please Add Product Name</string>
    <string name="addpricepermoq">Please Add Price Per As Unit</string>
    <string name="addpurchesprice">Please Add Purches price</string>
    <string name="addminimumorder">Please Add Minimum Order Quantity</string>
    <string name="addquantitystok">Please Add Quantity avialable in Stock</string>
    <string name="adddescription">Please Add About Product</string>
    <string name="slct_category">Please Select Category</string>
    <string name="slct_subcat">Please Add Select SubCategory</string>
    <string name="slct_measure">Please Add Select Measure</string>
    <string name="Nearbyproduct">Near By Products</string>
    <string name="newArrival">New Arrival</string>
    <string name="createlog">Create Catlog</string>
    <string name="high_to_low">High to Low</string>
    <string name="low_to_high">Low to High</string>
    <string name="most_popular">By Newest</string>
    <string name="canceled">cancel</string>
    <string name="do_you_want_delete_product">Do You Want To Delete This Product?</string>
    <string name="choose_role">Please Choose Your Role</string>
    <string name="douwantlogin">Do You Want Login?</string>
    <string name="RelatedProduct">Related Product</string>
    <string name="Rating">Ratings</string>
    <string name="enter_dni">Please Enter DNI</string>
    <string name="order_recieved">Order Recieved</string>
    <string name="Preparing">Preparing</string>
    <string name="ready">Ready</string>
    <string name="ontheway">On The Way</string>
    <string name="Order_id">Order Id</string>
    <string name="Deliverd">Delivered</string>
    <string name="complte_orders">Complete Orders</string>
    <string name="Gotoneetosell">Got one to sell?</string>
    <string name="getitinfront">Start Selling</string>
    <string name="VendorLogin">Seller Login</string>
    <string name="BuyerLogin">Buyer Login</string>
    <string name="otp">Enter Otp</string>
    <string name="SeeAllCategory">See All Category</string>
    <string name="VendorRegisration">Seller Registration</string>
    <string name="delete_product">Do You Want to Delete This Product???</string>
    <string name="photos">Only product photos allowed</string>
    <string name="SelectState">Select State</string>
    <string name="SelectCity">Select City</string>
    <string name="SelectNaighbour">Neighborhood</string>
    <string name="last_name">Last Name</string>
    <string name="RefrenceAddress">Refrence Address</string>
    <string name="StreetAddress">StreetAddress</string>
    <string name="report">Reporting illegal items to administrator</string>
    <string name="nudity">Nudity</string>
    <string name="copywrite">CopyWrite Product</string>
    <string name="hatespeech">HateSpeech</string>
</resources>