<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">




    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:enabled="true"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_about"
        android:title="@string/title_notifications" />

    <item
         android:id="@+id/navigation_save"
        android:icon="@drawable/ic_baseline_shopping_cart"
        android:title="@string/title_save" />

<!--    <item-->
<!--          android:id="@+id/navigation_search"-->
<!--        android:icon="@drawable/ic_baseline_search"-->
<!--        android:title="@string/title_search" />-->

    <item

        android:id="@+id/navigation_vendorProfile"
        android:icon="@drawable/ic_baseline_profile"
        android:title="@string/menu_profiles" />

</menu>
