<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:text="@string/report"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content"/>


        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/nudity"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/copywrite"
                android:layout_height="wrap_content"/>


            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/hatespeech"
                android:layout_height="wrap_content"/>



        </RadioGroup>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_gravity="right"
                android:layout_margin="15dp"
                android:text="@string/canceled"
                android:id="@+id/cancel"
                android:textSize="@dimen/_18sdp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonOk"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="15dp"
                android:text="@string/ok"
                android:textSize="@dimen/_18sdp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white" />
        </LinearLayout>







    </LinearLayout>




</LinearLayout>