<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/linear"
    android:orientation="vertical"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="@dimen/_100sdp"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_height="3dp"/>


    <LinearLayout
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/a_to_z_res"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"

                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:text="@string/high_to_low"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/by_nearest"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:text="@string/low_to_high"
            android:layout_height="wrap_content"/>
        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/most_popular"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:text="@string/most_popular"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</LinearLayout>